name:                reflex-dom-htmlea-vs
version:             0.1.0.0
synopsis:            A trial to use vector-sized with reflex-dom-htmlea
description:         This mainly uses the table-component.
license:             BSD3
license-file:        LICENSE
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
extra-source-files:  
cabal-version:       >=1.24

library
  exposed-modules:     Reflex.Dom.HTML5.Component.TableVS
                       , Reflex.Dom.HTML5.Component.TableVSHo
  hs-source-dirs:      lib/src
  default-language:    Haskell2010
  build-depends:       base
                       , containers
                       , data-default
                       , lens
                       , text
                       , ghcjs-dom
                       , jsaddle
                       , reflex
                       , reflex-dom
                       , reflex-dom-core
                       , reflex-dom-htmlea
                       , finite-typelits
                       , vector-sized
                       , singletons
  ghc-options: -Wall -O2 -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists 
